Bug 698471: apply vertical substitute glyphs in TTF fonts

We weren't applying vertical glyph substition (from the gsub table).